--- a/epncStyle.css
+++ b/epncStyle.css
@@ -50,15 +50,54 @@
 }
 
 #menu_bar{
-	background-image: linear-gradient(white, gray, white);
+	background-image: linear-gradient(white, blue, white);
 	background-size: 100%;
     background-repeat: no-repeat;
-    font-family: Calibri, Tahoma, Verdana, sans-serif;
-	font-weight: bold;
-    font-size: 1.5em;
     border-bottom: solid 1px #4f8735;
     z-index: 10;
+	cursor: pointer;
 }
+
+/*.menu_btn{
+	color: white;
+	font-weight: bold;
+	font-family: Calibri, Tahoma, Verdana, sans-serif;
+	font-size: 1.5em;
+}
+
+.menu_btn:hover{
+	color: #4f8735;
+  
+}
+
+.menu_btn:focus{
+	color: red;
+  
+}
+
+.dropdown{
+  position: absolute;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a{
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover{background-color: #ddd;}
+.show{display:block;}*/
 
 #menu_bar ul{
 	list-style-type: none;
@@ -80,9 +119,81 @@
 	text-decoration: none;
 }
 
-#menu_bar a:hover{
+/*#menu_bar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}*/
+
+#menu_bar li {
+  float: left;
+}
+
+#menu_bar li, a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  /*padding: 14px 16px;*/
+  text-decoration: none;
+}
+
+#menu_bar li a:hover, .dropdown:hover .dropbtn {
   color: red;
 }
+
+#menu_bar li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/*.dropdown{
+  position: absolute;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a{
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover{background-color: #ddd;}
+.show{display:block;}*/
+
  
 /*#epnc_logo{
 	float: left;
@@ -95,13 +206,14 @@
 	float: left;
 }*/
 
-.epnc_logo{
+#epnc_logo{
 	float: left;
-	width: 50%;
+	position: absolute;
+	width: 10%;
 	background-color: #e0f8d8;
 }
 
-div.epnc_logo img {
+#epnc_banner{
   width: 100%;
   height: 300px;
 }
